--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-ty-react",
-  "version": "1.0.1",
+  "version": "1.0.2-0",
   "main": "index.js",
   "bin": {
     "create-ty-react": "./dist/index.js"
